# sinopia-plugin

./: .gitignore  AGENTS.md  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  sinopia_plugin.py
sinopia/: config.py  rdf.py
src/: conf.json  dctap_shacl.py  editor_state.py  main.py
src/factories/: property_card.py
src/sinopia/: bluecore.py  config.py  dctap.py  loc.py
src/static/: default.css
src/templates/: _bf_interop.html  _dashboard.html  _editor.html  _header.html  _load_rdf.html  _marva_profiles.html  _resource_templates.html  _search.html  _search_results.html  _subnav.html  _welcome.html  base.html  dashboard.html  editor.html  index.html  input_card_literal.html  load_rdf.html  resource_templates.html  search.html
tests/: test_dctap_shacl.py  test_editor_state.py  test_integration.py  test_main.py  test_plugin.py  test_property_card.py
