[project]
name = "32-19-sinopia-plugin"
version = "0.1.0"
description = "Sinopia Linked Data Editor as an Airflow plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
