[project]
name = "sinopia-plugin"
version = "0.1.0"
description = "Sinopia Linked Data Editor as an Airflow plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "dctap2shacl>=0.2.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyshacl>=0.31.0",
    "rdflib>=7.6.0",
    "uvicorn>=0.29.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
